# spectral-image-segmentation

./: .gitignore  README.md  pyproject.toml  requirements.txt  segment.py
scimagseg/: imgraph.py  objfunc.py  sc.py
src/scimagseg/: imgraph.py  sc.py  segment.py
